--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
 <body class="relative h-screen">
   <div class="loader" data-theme="dark">
-    <h1>😼😼😸</h1>
-    <p>Tunggu Jeruk bersiap yaaa...</p>
+    <p>Waiting...</p>
     <progress class="progress"></progress>
   </div>
   <div id="root" class="relative h-screen">
@@ -147,11 +146,11 @@
   <!-- Open the modal using ID.showModal() method -->
   <dialog id="my_modal_1" class="modal">
     <div class="modal-box">
-      <h3 class="text-lg font-bold pb-4">Tau ga sih? 😼</h3>
+      <h3 class="text-lg font-bold pb-4">😊</h3>
       <p class="pb-2">Jeruk punya perasaan loh...</p>
       <p class="pb-2">Jeruk bisa menjagamu tetapi tidak bisa melarangmu...</p>
       <p class="pb-2">Jeruk diciptakan dengan penuh cinta oleh <a href="https://pianndi.github.io"
-          class="link">pianndi</a> - &copy; 2025.</p>
+          class="link">Jetrho</a> - &copy; 2025.</p>
       <div class="modal-action">
         <form method="dialog">
           <!-- if there is a button in form, it will close the modal -->
